[package]
name = "htmldsl_internal_derive"
version = "0.1.0"
authors = ["Quinten Palmer <quintenpalmer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
htmldsl_internal = {path = "../htmldsl_internal"}
syn = "1.0"
quote = "1.0"

[lib]
proc-macro = true
